setup cloud storage in terraform

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-project.md
-readme.md
+*.md
+project_id.txt
+
 venv
 */venv/
 */*/venv
@@ -16,3 +17,19 @@ __pycache__/
 */*/__pycache__/
 *.pyc
 .DS_Store
+
+project_id.txt
+.terraform
+.terraform*
+.tfstate
+.tfstate*
+*.lock
+*.lock*
+
+
+infrastructure/configs/*
+!infrastructure/configs/.gitkeep
+infrastructure/*/*.lock*
+
+
+
