create function for get history BTC ETH and put in GCS

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ project_id.txt
 *.lock
 *.lock*
 
-
+infrastructure/tmp
 infrastructure/configs/*
 !infrastructure/configs/.gitkeep
 infrastructure/*/*.lock*
