--- a/cloud_functions/fetch_realtime/Dockerfile
+++ b/cloud_functions/fetch_realtime/Dockerfile
@@ -5,8 +5,9 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY app.py .
+COPY *.py ./
 
 ENV PORT=8080
+ENV PYTHONUNBUFFERED=1
 
-CMD exec gunicorn --bind :8080 --workers 1 --threads 8 --timeout 0 app:app
+CMD exec gunicorn --bind :8080 --workers 1 --threads 8 --timeout 0 main:app
