--- a/cloud_functions/fetch_realtime/requirements.txt
+++ b/cloud_functions/fetch_realtime/requirements.txt
@@ -1,4 +1,6 @@
 functions-framework==3.*
-google-cloud-storage==2.10.0
-flask==3.0.0
-gunicorn==21.2.0
+flask==3.0.*
+gunicorn==21.*
+websocket-client==1.7.*
+google-cloud-storage>=2.14.0,<3.0.0
+google-cloud-pubsub>=2.25.0,<3.0.0
